tests/fixtures/invalid/hex_2_args.py
# hex() takes at most 1 argument, got 2
x = hex(1, 1)
